--- a/docs/演示.md
+++ b/docs/演示.md
@@ -1,3 +1,15 @@
 权限不足：
 
 ![image-20230503204501446](https://p.dabbit.net/blog/pic_bed/2023/05/83320de6ac632c7e_202305032045536.png)
+
+
+
+用户自主登录：
+
+![image-20230503212348828](https://p.dabbit.net/blog/pic_bed/2023/05/05f193d622dc36c7_202305032123871.png)
+
+
+
+授权：
+
+![image-20230503225641967](https://p.dabbit.net/blog/pic_bed/2023/05/3e2f7ae9e218b0c9_202305032256035.png)
