modified:   "docs/\346\274\224\347\244\272.md" modified:   html/index.html modified:   index.js modified:   server/file_manager/collect_node.db

--- a/docs/演示.md
+++ b/docs/演示.md
@@ -18,3 +18,44 @@
 
 
 
+表格输出如下：
+
+| 列名              | 数据类型    | 描述                         |
+| ----------------- | ----------- | ---------------------------- |
+| id                | int(11)     | 自增长用户ID                 |
+| user_name         | varchar(50) | 用户名                       |
+| passwd            | varchar(50) | 密码（使用哈希加密存储）     |
+| permission        | int(11)     | 用户权限值                   |
+| name              | varchar(50) | 用户姓名（可为空）           |
+| stu_number        | int(11)     | 用户学号（可为空）           |
+| json              | JSON        | 存储用户其他信息的 JSON 对象 |
+| permission_source | varchar(50) | 授权来源（可为空）           |
+
+| 列名      | 数据类型     | 描述                   |
+| --------- | ------------ | ---------------------- |
+| id        | int(11)      | 自增长文件ID           |
+| user_name | varchar(50)  | 上传该文件的用户名称   |
+| uuid      | varchar(50)  | 文件唯一标识符         |
+| file_path | varchar(255) | 文件存储路径（可为空） |
+| file_name | varchar(255) | 文件名（可为空）       |
+| file_size | float        | 文件大小（单位：KB）   |
+
+| 列名                 | 数据类型    | 描述                             |
+| -------------------- | ----------- | -------------------------------- |
+| id                   | int(11)     | 自增长设备ID                     |
+| own_user_name        | varchar(50) | 设备所属用户名称                 |
+| uuid                 | varchar(50) | 设备唯一标识符                   |
+| is_turn_off_by_admin | int(11)     | 设备被管理员关闭的状态（可为空） |
+| json                 | JSON        | 存储设备其他信息的 JSON 对象     |
+
+| 列名            | 数据类型     | 描述                       |
+| --------------- | ------------ | -------------------------- |
+| id              | int(11)      | 自增长打印记录ID           |
+| user_name       | varchar(50)  | 打印该文件的用户名称       |
+| printer_id      | int(11)      | 打印机ID                   |
+| print_time      | datetime     | 打印时间                   |
+| print_file_name | varchar(255) | 打印文件名                 |
+| print_file_size | float        | 打印文件大小（单位：KB）   |
+| num_pages       | int(11)      | 打印页数                   |
+| num_copies      | int(11)      | 打印份数                   |
+| color_mode      | varchar(20)  | 打印颜色模式（黑白或彩色） |
